--- a/Responsive Web Design/Cat Photo App/index.html
+++ b/Responsive Web Design/Cat Photo App/index.html
@@ -34,7 +34,7 @@
             <section>
                 <h2>Cat Form</h2>
                 <form action="https://freecatphotoapp.com/submit-cat-photo"></form>
-                <input type="text">
+                <input type="text" name="catphotourl">
             </section>
         </main>
     </body>
