--- a/Responsive Web Design/Cat Photo App/index.html
+++ b/Responsive Web Design/Cat Photo App/index.html
@@ -35,7 +35,7 @@
                 <h2>Cat Form</h2>
                 <form action="https://freecatphotoapp.com/submit-cat-photo"></form>
                 <input type="text" name="catphotourl" placeholder="cat photo URL" required>
-                <button>Submit</button>
+                <button type="submit">Submit</button>
             </section>
         </main>
     </body>
