--- a/Responsive Web Design/Cat Photo App/index.html
+++ b/Responsive Web Design/Cat Photo App/index.html
@@ -41,7 +41,8 @@
                 </fieldset>
                 <fieldset>
                     <legend>What's your cat's personality?</legend>
-                    <input type="checkbox" id="loving" name="personality"> <label for="loving">Loving</label>
+                    <input type="checkbox" name="personality" id="loving"> <label for="loving">Loving</label>
+                    <input type="checkbox" name="personality" id="lazy"> <label for="lazy">Lazy</label>
                 </fieldset>
                 <input type="text" name="catphotourl" placeholder="cat photo URL" required>
                 <button type="submit">Submit</button>
