--- a/Responsive Web Design/Cat Photo App/index.html
+++ b/Responsive Web Design/Cat Photo App/index.html
@@ -43,6 +43,7 @@
                     <legend>What's your cat's personality?</legend>
                     <input type="checkbox" name="personality" id="loving"> <label for="loving">Loving</label>
                     <input type="checkbox" name="personality" id="lazy"> <label for="lazy">Lazy</label>
+                    <input type="checkbox" name="personality" id="energetic"> <label for="energetic">Energetic</label>
                 </fieldset>
                 <input type="text" name="catphotourl" placeholder="cat photo URL" required>
                 <button type="submit">Submit</button>
