--- a/Responsive Web Design/Cat Photo App/index.html
+++ b/Responsive Web Design/Cat Photo App/index.html
@@ -36,14 +36,14 @@
                 <form action="https://freecatphotoapp.com/submit-cat-photo"></form>
                 <fieldset>
                     <legend>Is your cat an indoor or outdoor cat?</legend>
-                    <label><input type="radio" id="indoor" name="indoor-outdoor" value="indoor"> Indoor</label>
-                    <label><input type="radio" id="outdoor" name="indoor-outdoor" value="outdoor"> Outdoor</label>
+                    <label><input type="radio" name="indoor-outdoor" id="indoor" value="indoor"> Indoor</label>
+                    <label><input type="radio" name="indoor-outdoor" id="outdoor" value="outdoor"> Outdoor</label>
                 </fieldset>
                 <fieldset>
                     <legend>What's your cat's personality?</legend>
-                    <input type="checkbox" name="personality" id="loving"> <label for="loving">Loving</label>
-                    <input type="checkbox" name="personality" id="lazy"> <label for="lazy">Lazy</label>
-                    <input type="checkbox" name="personality" id="energetic"> <label for="energetic">Energetic</label>
+                    <input type="checkbox" name="personality" id="loving" value="loving"> <label for="loving">Loving</label>
+                    <input type="checkbox" name="personality" id="lazy" value="lazy"> <label for="lazy">Lazy</label>
+                    <input type="checkbox" name="personality" id="energetic" value="energetic"> <label for="energetic">Energetic</label>
                 </fieldset>
                 <input type="text" name="catphotourl" placeholder="cat photo URL" required>
                 <button type="submit">Submit</button>
