--- a/JavaScript/Hello World/tampilkan_alert.html
+++ b/JavaScript/Hello World/tampilkan_alert.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tampilkan alert</title>
-</head>
+<html>
     <body>
-        <script>
-            alert("I'm JavaScript!")
-        </script>
+      <script>
+        alert("I'm JavaScript!");
+      </script>
     </body>
 </html>
