just change a few lines

--- a/JavaScript/Hello World/tampilkan_alert_dengan_script_external.html
+++ b/JavaScript/Hello World/tampilkan_alert_dengan_script_external.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tampilkan alert dengan script external</title>
-</head>
+<html>
     <body>
-        <script src="tampilkan_alert_dengan_script_external.js"></script>
+        <script src="alert.js"></script>
     </body>
 </html>
