fix code and add comments

--- a/JavaScript/Variabel/bekerja_dengan_variabel.html
+++ b/JavaScript/Variabel/bekerja_dengan_variabel.html
@@ -7,9 +7,10 @@
 </head>
     <body>
         <script>
-            let name = "John";
-            let admin = name;
-            alert(admin)
+            let admin, name; // bisa mendeklarasikan dua variabel sekaligus
+            name = "Bama";
+            admin = name;     
+            alert(admin); // "Bama"
         </script>
     </body>
 </html>
