change variable name

--- a/JavaScript/Variabel/memberikan_nama_yang_tepat.html
+++ b/JavaScript/Variabel/memberikan_nama_yang_tepat.html
@@ -8,7 +8,7 @@
     <body>
         <script>
             let ourPlanetName = "Earth";
-            let currentVisitor = "Bama";
+            let currentUserName = "Bama";
         </script>
     </body>
 </html>
