change variable values and fix comments

--- a/JavaScript/Tipe Data/petik_string.html
+++ b/JavaScript/Tipe Data/petik_string.html
@@ -7,10 +7,10 @@
 </head>
     <body>
         <script>
-            let name = "Ilya";
+            let name = "Bama";
             alert( `hello ${1}` ); // hello 1
             alert( `hello ${"name"}` ); // hello name
-            alert( `hello ${name}` ); // Ilya
+            alert( `hello ${name}` ); // hello Bama
         </script>
     </body>
 </html>
