--- a/JavaScript/Kondisi Bercabang/if.html
+++ b/JavaScript/Kondisi Bercabang/if.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>If</title>
+    <title>if (string berisi angka nol)</title>
 </head>
 <body>
     <script>
