--- a/JavaScript/Kondisi Bercabang/tulis_ulang_if.html
+++ b/JavaScript/Kondisi Bercabang/tulis_ulang_if.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tulis ulang "if" menggunakan "?"</title>
+    <title>Tulis ulang 'if' menggunakan '?'</title>
 </head>
 <body>
     <script>
