--- a/JavaScript/Kondisi Bercabang/tunjukkan_tandanya.html
+++ b/JavaScript/Kondisi Bercabang/tunjukkan_tandanya.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tunjukkan Tandanya</title>
+    <title>Tunjukkan tandanya</title>
 </head>
 <body>
     <script>
